# intersection

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: licenses_and_advisories.yml  msrv.yml
src/: lib.rs
